samples/_failures_safe/1761337039_1c2b75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee230de5.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_ee230de5.c:139:13: error: expected expression at end of input
  139 |             printf("%s %s %s\n",
      |             ^~~~~~
./samples/SAFE/__tmp_ee230de5.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee230de5.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee230de5.c:139:13: error: expected declaration or statement at end of input
